tests/files/type_checker_tests/should_pass/056.cmdr
//Test that not operations type check
x = !!false;
