tests/files/type_checker_tests/should_fail/219.cmdr
//Should not allow changing variable types
x = 1;
x = false;